force-app/main/default/objects/Class__c/fields/Class_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher__c</fullName>
    <label>Class Teacher</label>
    <length>20</length>
    <type>Text</type>
</CustomField>