force-app/main/default/objects/Class__c/fields/Donation_for_new_Student__c.field-meta.xml
<CustomField>
    <fullName>Donation_for_new_Student__c</fullName>
    <label>Donation for new Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>