force-app/main/default/objects/Class__c/fields/Students_Strength__c.field-meta.xml
<CustomField>
    <fullName>Students_Strength__c</fullName>
    <label>Students Strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>